# blog-fastapi

./: .coveragerc  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  setup.cfg
.chart/: Chart.yaml  values.yaml
.chart/templates/: celery-beat.yaml  celery.yaml  configmap.yaml  fastapi.yaml  ingress.yaml  networkpolicy.yaml  postgres.yaml  pvc.yaml  rabbitmq.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 161c3081124e_.py  1b3cad05731a_.py  573d506fec72_.py  681fd1e6d3e3_.py  bc659523cacf_.py  c74dfef0e43b_.py
docker/: Dockerfile  entrypoint.sh
src/: main.py  worker.py
src/articles/: controllers.py  mappers.py  models.py  repositories.py  schemas.py
src/blog/: controllers.py  mappers.py  models.py  repositories.py  schemas.py
src/comments/: controllers.py  mappers.py  models.py  repositories.py  schemas.py
src/core/: celery.py  db.py  elasticsearch.py  mapper.py  repository.py  security.py  settings.py
src/item/: controllers.py  mappers.py  models.py  repositories.py  schemas.py
src/user/: auth_utils.py  controllers.py  mappers.py  models.py  repositories.py  schemas.py
tests/: conftest.py  test_core.py  test_item.py  test_user.py
tests/unit/: test_elasticsearch_document_handler.py
