[tool.poetry]
name = "app"
version = "1.0.4"
authors = ["Merixstudio <code@merixstudio.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
fastapi = "^0.54.1"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^5.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pydantic = "^1.4"
emails = "^0.5.15"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
sentry-sdk = "^1.3"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
radon = "^5.0.1"
gunicorn = "^20.1.0"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src"

[tool.isort]
line_length = 88
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
balanced_wrapping = true
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
